--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -22,4 +22,9 @@
       </div>
     </li>
   </ul>
+  <ul class="navbar-nav ml-auto">
+    <li>
+      <app-stats></app-stats>
+    </li>
+  </ul>
 </nav>
