--- a/src/app/components/products/products-list/product-item/product-item.component.html
+++ b/src/app/components/products/products-list/product-item/product-item.component.html
@@ -4,8 +4,8 @@
   <td>{{product.price}}</td>
   <td>{{product.quantity}}</td>
   <td>{{product.selected}}</td>
-  <td>{{product.available}}</td>
-  <td >
+  <td><span [ngClass]="product.available? 'fa fa-check text-success': 'fa fa-check'"></span></td>
+  <td>
     <button (click)="onSelect(product)" [ngClass]="product.selected ? 'btn-success' : 'btn-danger'" class="btn btn-sm">
       <span *ngIf="product.selected">Unselected</span>
       <span *ngIf="!product.selected">Select</span>
